@@ -22,6 +22,8 @@ User visible changes
   + BYTE is now a full-fledged type. [ 1854698 ]
   + Fix linux:dirent definition in the bindings/glibc module. [ 1779490 ]
   + Symbolic links into non-existent directories can now be deleted. [ 1860489 ]
+  + DIRECTORY :FULL on directories now returns the same information as
+    on files. [ 1860677 ]
 
 
 2.43 (2007-11-18)
